--- a/business/borrow_order.html
+++ b/business/borrow_order.html
@@ -453,7 +453,7 @@
                             </div>
                             <div class="form-group">   
                                 <button type="submit" class="btn btn-primary">查询</button>
-                                <button class="btn btn-refresh">清空条件</button>
+                                <button class="btn btn-refresh" type="reset">清空条件</button>
                             </div>
                         </form>
                     </div>
