--- a/activity/userdiscount_list.html
+++ b/activity/userdiscount_list.html
@@ -155,10 +155,10 @@
                     </a>
                     <ul>
                         <li><a class="apl40" href="activity_list.html">活动统计</a></li>
-                        <li><a class="apl40 active" href="userdiscount_list.html">用户活动优惠统计</a></li>
+                        <li><a class="apl40 active" href="userdiscount_list.html">用户参与活动统计</a></li>
                         <li><a class="apl40" href="redpacket_list.html">红包统计</a></li>
                         <li><a class="apl40" href="coupon_list.html">加息券统计</a></li>
-                        <li><a class="apl40" href="reward_list.html">推广奖励统计</a></li>
+                        <li><a class="apl40" href="reward_list.html">积分统计</a></li>
                     </ul>
                 </li>
                 <li>
@@ -233,7 +233,7 @@
             <div class="nav-title"><span>融资初审</span></div>
         </div> -->
         <div class="tab-list" style="margin-bottom:20px;">
-            <a class="tab-item active">用户优惠统计</a>
+            <a class="tab-item active" style="width:145px;">用户参与活动统计</a>
         </div>
         <div class="panel-body light-bg">
             <section id="unseen">
