--- a/admin/userlist.html
+++ b/admin/userlist.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" type="text/css" href="../assets/jquery-multi-select/css/multi-select.css" />
     <link rel="stylesheet" type="text/css" href="../assets/jquery-tags-input/jquery.tagsinput.css" />
     <link rel="stylesheet" type="text/css" href="../assets/select2-master/select2.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="../assets/validation/bootstrapValidator.min.css" /> -->
     <!-- radio -->
     <link href="../assets/iCheck-master/skins/minimal/blue.css" rel="stylesheet">
 
@@ -97,7 +96,7 @@
                     <span style="display: block;line-height:30px; text-align:center;">一级菜单</span>
                 </li> -->
                 <li>
-                    <a class="active" href="index.html">
+                    <a class="active" href="../index.html">
                         <i class="fa fa-home"></i>
                         <span>首页</span>
                     </a>
@@ -248,7 +247,7 @@
                     <div class="search-box">
                         <div class="form-inline">
                             <div class="form-group fr">   
-                                <button type="button" class="btn btn-info" data-toggle="modal" data-target=".add-admin-modal"><i class="fa fa-plus"></i>增加管理员</button>
+                                <button type="button" class="btn btn-info" data-toggle="modal" data-target=".add-admin-modal" onclick="update('')"><i class="fa fa-plus"></i>增加管理员</button>
                             </div>
                         </div>
                     </div>
@@ -356,7 +355,7 @@
                         <label class="col-sm-3 control-label col-lg-3">登录名：</label>
                         <div class="col-lg-7">
                             <div class="input-group" style="width: 350px">
-                                <input type="text" class="form-control required" placeholder="请输入登录名" name="loginname"  >
+                                <input type="text" class="form-control required" placeholder="请输入登录名" name="loginname" id="loginname" >
                             </div>
                         </div>
                     </div>
@@ -397,13 +396,13 @@
                         <div class="col-lg-9 icheck">
                             <div class="minimal-blue">
                                 <div class="radio ">
-                                    <input tabindex="3" type="radio"  name="accountState" checked="" value="123">
+                                    <input tabindex="3" type="radio"  name="accountState" value="123" id="radio1">
                                     <label>正常</label>
                                 </div>
                             </div>
                             <div class="minimal-blue">
                                 <div class="radio ">
-                                    <input tabindex="3" type="radio"  name="accountState" value="13">
+                                    <input tabindex="3" type="radio"  name="accountState" value="13" id="radio2">
                                     <label>停用</label>
                                 </div>
                             </div>
@@ -414,7 +413,7 @@
                         <div class="col-lg-9 icheck checkboxWrap">
                             <div class="minimal-blue">
                                 <div class="checkbox ">
-                                    <input type="checkbox"  name="roleAuth" value=0 >
+                                    <input type="checkbox"  name="roleAuth" value=0 id="roleAuth0">
                                     <label>初级管理员</label>
                                 </div>
                             </div>
@@ -543,6 +542,7 @@
 
         $("#signupForm").validate({
             submitHandler: function() { 
+                console.log($("input[name='accountState']:checked").val());
                 console.log($("#signupForm").serialize());
                 alertFun({
                     content:'更新成功',
@@ -553,6 +553,11 @@
             }
         });
     });
+
+    function update(){
+        //$('#radio2,#roleAuth0').iCheck('check');
+        clearFrom('signupForm');
+    }
 </script>
 </body>
 </html>
