--- a/business/borrow_order.html
+++ b/business/borrow_order.html
@@ -87,7 +87,7 @@
                     <span style="display: block;line-height:30px; text-align:center;">一级菜单</span>
                 </li> -->
                 <li>
-                    <a href=".../index.html">
+                    <a href="../index.html">
                         <i class="fa fa-home"></i>
                         <span>首页</span>
                     </a>
@@ -239,22 +239,22 @@
             <section id="unseen">
                 <div class="panel-body" style="padding-left:0;">
                     <div class="search-box">
-                        <form class="form-inline" role="form">
+                        <form class="form-inline" role="form" id="baseListForm">
                             <div class="form-group">
                                 <label class="control-label">借款人：</label>
-                                <input type="text" class="form-control" placeholder="输入姓名或手机号">
+                                <input type="text" class="form-control" placeholder="输入姓名或手机号" value="1213" >
                             </div>
                             <div class="form-group">
                                 <label class="control-label">用户类型：</label>
-                                <select class="form-control" id="source6">
+                                <select class="form-control" >
                                     <option value="1">请选择用户类型</option>
                                     <option value="2">等待通过</option>
-                                    <option value="3">审核未通过</option>
+                                    <option value="3" selected="">审核未通过</option>
                                 </select>
                             </div>
                             <div class="form-group">
                                 <label class="control-label">处理状态：</label>
-                                <select class="form-control" id="source6">
+                                <select class="form-control" >
                                     <option value="1">请选择处理状态</option>
                                     <option value="2">等待通过</option>
                                     <option value="3">审核未通过</option>
@@ -262,7 +262,7 @@
                             </div>
                             <div class="form-group">   
                                 <button type="submit" class="btn btn-primary">查询</button>
-                                <button class="btn btn-refresh" type="reset">清空条件</button>
+                                <a class="btn btn-refresh" onclick="clearFrom('baseListForm')">清空条件</a>
                             </div>
                         </form>
                     </div>
@@ -537,6 +537,8 @@
             last:"尾页"
         })
     });
+
+
 </script>
 </body>
 </html>
