--- a/system/attribute_management.html
+++ b/system/attribute_management.html
@@ -48,7 +48,7 @@
 <header class="header fixed-top clearfix">
 <!--logo start-->
 <div class="brand">
-    <a href="index.html" class="logo">
+    <a href="../index.html" class="logo">
         <img src="../images/logo.png" alt="">
     </a>
     <div class="sidebar-toggle-box">
@@ -88,7 +88,7 @@
                     <span style="display: block;line-height:30px; text-align:center;">一级菜单</span>
                 </li> -->
                 <li>
-                    <a class="active" href="index.html">
+                    <a href="../index.html">
                         <i class="fa fa-home"></i>
                         <span>首页</span>
                     </a>
